<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment2</name>
  <version>0.0.0</version>
  <description>Assignment 2 ROS2 package</description>
  <maintainer email="carolina.polese@yahoo.it">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <!--Build tool dependency:
    ament_cmake is required to configure and build this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime + build dependencies --> 
  <depend>rclcpp</depend> 
  <depend>geometry_msgs</depend> 
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- This package contains custom interfaces (msg/srv) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export build type for ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>